finish leader functionality

--- a/todo
+++ b/todo
@@ -1,9 +1,11 @@
-if previous answer happens to be selected for next round, remove green background
-make server send json and client accept json response for playlist scores
 
 add playlist image on game page
 STYLING
 
+add music visualizer
+add countdown timer
+
+make server send json and client accept json response for playlist scores
 get more songs if youre on the last song
 share on social button
 add account page where you can add friends (backend/frontend)
