add JWT authentication

--- a/todo
+++ b/todo
@@ -1,13 +1,10 @@
 FRONTEND
--account page needs to send JWT
--account page needs to redirect to home page if no jwt can be found. might as well do the same the leaderboard
--create log out button that clears username and jwt
+-leaderboard page is using json file to get info about playlists. change that source to db
 
 BACKEND
--account controller needs to accept and verify JWT 
 
--create end of game if there are no songs left
 -make points based on how fast you answer
+
 -check for swear words in username?
 -add instructions
 -move playlists to the DB
